--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "eslint": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-universe": "^7.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
@@ -39,5 +42,8 @@
   "lint-staged": {
     "*.{ts,tsx}": "eslint",
     "*.js": "eslint --cache --fix"
+  },
+  "eslintConfig": {
+    "extends": "universe/native"
   }
 }
